https://drive.google.com/file/d/11qj3sAMALHrcpEAVFgQPzdsnci8rLHNV/view?usp=sharing

--- a/Secondassignment.html
+++ b/Secondassignment.html
@@ -12,7 +12,21 @@
         text-align: left;
     }
     .Child1{
-        
+        color: brown;
+        font-size: 16px;
+    }
+    .Child2{
+        color: blue;
+        font-size: 16px;
+    }
+
+    .Likes{
+        font-size: 25px;
+        color: black;    
+    }
+    .Dislikes{
+        font-size: 25px;
+        color: gold;
     }
 </style>
 <body>
@@ -24,7 +38,7 @@
       <li>Cooking</li>
       <li>Craft</li>
     </ul>
-</div>
+
     <br>
     <h1 class="Dislikes" id="Things I dislike">Things I dislike</h1>
     <ul>
@@ -34,6 +48,7 @@
 
     </ul>
 </div>
+<br>
 
 <div class="Child2">
     <h1 class="Likes" id="Foods I like">Foods I like</h1>
